--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700;800;900&display=swap");
 body {
   background-image: url(../img/jellyfish-gcdb9508dd_1920.jpg);
+  background-position: 95% 0;
+  background-attachment: fixed;
 }
 
 header .navbar .container-fluid {
@@ -23,9 +26,18 @@ header .navbar .container-fluid .nav-link {
   color: white;
 }
 
+header .navbar-top {
+  margin-top: 15px;
+}
+
+header .navbar-top .nav-item {
+  margin: 0 24px;
+}
+
 header .navbar-media {
   position: fixed;
   top: 50%;
+  left: 16px;
   -webkit-transform: translate(0, -50%);
           transform: translate(0, -50%);
 }
@@ -46,20 +58,33 @@ header .navbar-media .container-fluid .navbar-nav {
       -ms-flex-direction: column;
           flex-direction: column;
   text-align: center;
+  font-size: 20px;
+}
+
+header .navbar-media .container-fluid .navbar-nav .nav-item {
+  margin: 12px 0;
 }
 
 .content .row {
-  margin: 60px 0;
+  margin-top: 20vh;
 }
 
 .content .row .col-4 h2 {
   font-weight: 800;
-  font-size: 60px;
+  font-size: 72px;
   color: #84d7ff;
-  margin-bottom: 20px;
+  margin-bottom: 32px;
+  font-family: 'Poppins', sans-serif;
+  letter-spacing: 3px;
 }
 
 .content .row .col-4 p {
+  color: white;
+  margin-bottom: 32px;
+}
+
+.content .row .col-4 button {
+  background: #45b8f1;
   color: white;
 }
 /*# sourceMappingURL=style.css.map */
