--- a/style.sass
+++ b/style.sass
@@ -53,6 +53,9 @@ header
             p
                 color: white
                 margin-bottom: 32px
-            button
+            .btn
                 background: #45b8f1
                 color: white
+                &:hover
+                    background: #007cb9
+
