--- a/style.sass
+++ b/style.sass
@@ -9,6 +9,9 @@ header
     .navbar
         .container-fluid
             justify-content: center
+            .navbar-brand
+                &:hover
+                    color: yellow
             .navbar-collapse
                 flex-grow: 0
             a
@@ -16,6 +19,8 @@ header
             .nav-link
                 text-transform: uppercase
                 color: white
+                &:hover
+                    color: #45b8f1
         &-top
             margin-top: 15px
             .nav-item
