--- a/style.sass
+++ b/style.sass
@@ -40,6 +40,18 @@ header
                 .nav-item
                     margin: 12px 0
 
+.bar-right
+    height: 100%
+    position: fixed
+    flex-direction: column
+    right: 16px
+    writing-mode: vertical-lr
+    // justify-content: flex-start
+    color: white
+    .col-12
+        text-align: right
+        margin-bottom: 120px
+    
 .content
     // background: green
     .row
@@ -63,4 +75,3 @@ header
                 color: white
                 &:hover
                     background: #007cb9
-
